recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:15: error: reassignment to val
	if (levels = 0)
                   ^